--- a/app/templates/tagValueNotes/tagValueNotes.html
+++ b/app/templates/tagValueNotes/tagValueNotes.html
@@ -36,7 +36,7 @@ Tag Value Notes
     <h1>Tag Value Notes <small></small></h1>
 </div>
 <div>
-    <a class = "btn btn-default" title = "Add" href = "{{ url_for("tagValues.addTagValueNote", tagValueId = tagValue.TagValueId) }}" role = "button">
+    <a class = "btn btn-default" title = "Add" href = "{{ url_for("tagValueNotes.addTagValueNote", tagValueId = tagValue.TagValueId) }}" role = "button">
         <span class="glyphicon glyphicon-plus"></span></a>
     <br><br>
     <table id = "tagValueNotesTable" class = "table">
@@ -53,9 +53,9 @@ Tag Value Notes
                 <tr>
                     <td>{{ tagValueNote.Note.Timestamp }}</td>
                     <td>{{ tagValueNote.Note.Note }}</td>
-                    <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("tagValues.editTagValueNote",
-                        noteId = tagValueNote.NoteId) }}"><span class="glyphicon glyphicon-edit"></span></a></td>
-                    <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("tagValues.deleteTagValueNote",
+                    <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("tagValueNotes.editTagValueNote",
+                        noteId = tagValueNote.NoteId, tagValueId = tagValueNote.TagValueId) }}"><span class="glyphicon glyphicon-edit"></span></a></td>
+                    <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("tagValueNotes.deleteTagValueNote",
                         noteId = tagValueNote.NoteId, tagValueId = tagValueNote.TagValueId) }}"><span class="glyphicon glyphicon-trash"></span></a></td>
                 </tr>
             {% endfor %}
