--- a/app/templates/elementAttributes/elementAttributes.html
+++ b/app/templates/elementAttributes/elementAttributes.html
@@ -58,11 +58,11 @@ Element Attributes
     <script>
         $(document).ready(function()
         {
-            $('#elementAttributesTable').DataTable
+            $("#elementAttributesTable").DataTable
             ({
                 "order":
                 [
-                    [0, 'asc']              // Element Attribute Template.
+                    [0, "asc"]              // Element Attribute Template.
                 ],
                 "columns":
                 [
