--- a/app/templates/elements/select.html
+++ b/app/templates/elements/select.html
@@ -128,11 +128,11 @@ Data Entry - Elements
     <script>
         $(document).ready(function()
         {
-            $('#table').DataTable
+            $("#table").DataTable
             ({
                 "order":
                 [
-                    [1, 'asc']              // Name.
+                    [1, "asc"]              // Name.
                 ],
                 "columns":
                 [
