--- a/app/templates/eventFrames/select.html
+++ b/app/templates/eventFrames/select.html
@@ -189,7 +189,7 @@ Event Frames
     <script>
         $(document).ready(function()
         {
-            $('#table').DataTable
+            $("#table").DataTable
             ({
                 "order":
                 [
