--- a/app/templates/lookups/select.html
+++ b/app/templates/lookups/select.html
@@ -91,11 +91,11 @@ Lookups
     <script>
         $(document).ready(function()
         {
-            $('#lookupsTable').DataTable
+            $("#lookupsTable").DataTable
             ({
                 "order":
                 [
-                    [1, 'asc'],             // Name.
+                    [1, "asc"],             // Name.
                 ],
                 "columns":
                 [
