--- a/app/templates/physicalModels/select.html
+++ b/app/templates/physicalModels/select.html
@@ -98,11 +98,11 @@ Physical Models
     <script>
         $(document).ready(function()
         {
-            $('#physicalModelsTable').DataTable
+            $("#physicalModelsTable").DataTable
             ({
                 "order":
                 [
-                    [1, 'asc'],             // Name.
+                    [1, "asc"],             // Name.
                 ],
                 "columns":
                 [
