--- a/app/templates/tagValueNotes/tagValueNotes.html
+++ b/app/templates/tagValueNotes/tagValueNotes.html
@@ -71,11 +71,11 @@ Tag Value Notes
     <script>
         $(document).ready(function()
         {
-            $('#tagValueNotesTable').DataTable
+            $("#tagValueNotesTable").DataTable
             ({
                 "order":
                 [
-                    [0, 'desc']              // Timestamp.
+                    [0, "desc"]              // Timestamp.
                 ],
                 "columns":
                 [
