--- a/app/templates/tagValues/tagValues.html
+++ b/app/templates/tagValues/tagValues.html
@@ -99,11 +99,11 @@ Tag Values
     <script>
         $(document).ready(function()
         {
-            $('#tagValuesTable').DataTable
+            $("#tagValuesTable").DataTable
             ({
                 "order":
                 [
-                    [0, 'desc']              // Timestamp.
+                    [0, "desc"]              // Timestamp.
                 ],
                 "columns":
                 [
