--- a/app/templates/tags/select.html
+++ b/app/templates/tags/select.html
@@ -96,11 +96,11 @@ Tags
     <script>
         $(document).ready(function()
         {
-            $('#tagsTable').DataTable
+            $("#tagsTable").DataTable
             ({
                 "order":
                 [
-                    [1, 'asc'],             // Name.
+                    [1, "asc"],             // Name.
                 ],
                 "columns":
                 [
