--- a/app/templates/unitOfMeasurements/unitOfMeasurements.html
+++ b/app/templates/unitOfMeasurements/unitOfMeasurements.html
@@ -53,11 +53,11 @@ Units of Measurment
     <script>
         $(document).ready(function()
         {
-            $('#unitOfMeasurementsTable').DataTable
+            $("#unitOfMeasurementsTable").DataTable
             ({
                 "order":
                 [
-                    [0, 'asc'],             // Name.
+                    [0, "asc"],             // Name.
                 ],
                 "columns":
                 [
