--- a/app/templates/users/users.html
+++ b/app/templates/users/users.html
@@ -36,7 +36,7 @@ Users
                 <td>{{ user.Role.Name }}</td>
                 <td><a class = "btn btn-default" title = "Change Password" href = "{{ url_for("users.changePassword", userId = user.UserId) }}">
                     <span class="glyphicon glyphicon-lock"></span></a></td>
-                {% if user.Name != 'pi' %}
+                {% if user.Name != "pi" %}
                 <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("users.editUser", userId = user.UserId) }}">
                     <span class="glyphicon glyphicon-edit"></span></a></td>
                 <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("users.deleteUser", 
@@ -59,11 +59,11 @@ Users
     <script>
         $(document).ready(function()
         {
-            $('#usersTable').DataTable
+            $("#usersTable").DataTable
             ({
                 "order":
                 [
-                    [0, 'asc'],             // Name.
+                    [0, "asc"],             // Name.
                 ],
                 "columns":
                 [
