--- a/app/templates/eventFrameTemplates/select.html
+++ b/app/templates/eventFrameTemplates/select.html
@@ -9,69 +9,32 @@ Event Frame Templates
 {% block page_content %}
 <div>
     <ol class = "breadcrumb">
-        {% if childrenClass == "Enterprise" %}
-            <li class = "active">..</li>
-            {% set tableHeader = "Enterprise" %}
-            {% set pageHeaderSubText = "Enterprises" %}
-        {% elif childrenClass == "Site" %}
-            <li><a href = "{{ url_for("eventFrameTemplates.selectEventFrameTemplate", selectedClass = "Root") }}">..</a></li>
-            <li class = "active">{{ parent.Name }}</li>
-            {% set tableHeader = "Site" %}
-            {% set pageHeaderSubText = "Sites" %}
-        <!-- "and parent" checks for systems that have not been configured with a site yet. -->
-        {% elif childrenClass == "ElementTemplate" and parent %}
-            <li><a href = "{{ url_for("eventFrameTemplates.selectEventFrameTemplate", selectedClass = "Root") }}">..</a></li>
-            <li><a href = "{{ url_for("eventFrameTemplates.selectEventFrameTemplate", selectedClass = "Enterprise",
-                selectedId = parent.Enterprise.id()) }}">{{ parent.Enterprise.Name }}</a></li>
-            <li class = "active">{{ parent.Name }}</li>
-            {% set tableHeader = "Element Template" %}
-            {% set pageHeaderSubText = "Element Templates" %}
-        {% elif childrenClass == "EventFrameTemplate" %}
-            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Root") }}">..</a></li>
-            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Enterprise",
-                selectedId = parent.Site.Enterprise.id()) }}">{{ parent.Site.Enterprise.Name }}</a></li>
-            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Site",
-                selectedId = parent.Site.id()) }}">{{ parent.Site.Name }}</a></li>
-            <li class = "active">{{ parent.Name }}</li>
-            {% set tableHeader = "Event Frame Template" %}
-            {% set pageHeaderSubText = "" %}
-        {% elif childrenClass == "DescendantEventFrameTemplate" %}
-            <!-- These are children event frame templates. -->
-            {% set origin = parent.origin() %}
-            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Root") }}">..</a></li>
-            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Enterprise",
-                selectedId = origin.ElementTemplate.Site.Enterprise.id()) }}">{{ origin.ElementTemplate.Site.Enterprise.Name }}</a></li>
-            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Site",
-                selectedId = origin.ElementTemplate.Site.id()) }}">{{ origin.ElementTemplate.Site.Name }}</a></li>
-            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "ElementTemplate",
-                selectedId = origin.ElementTemplate.id()) }}">{{ origin.ElementTemplate.Name }}</a></li>
-            {% for ancestor in parent.ancestors([]) %}
-                <li><a href = "{{ url_for("eventFrameTemplates.selectEventFrameTemplate", selectedClass = ancestor.__class__.__name__,
-                    selectedId = ancestor.id()) }}">{{ ancestor.Name }}</a></li>
-            {% endfor %}
-            <li class = "active">{{ parent.Name }}</li>
-            {% set tableHeader = "Event Frame Template" %}
-            {% set pageHeaderSubText = "" %}
-        {% endif %}
+        {% set origin = parent.origin() %}
+        <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Root") }}">..</a></li>
+        <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Enterprise",
+            selectedId = origin.ElementTemplate.Site.Enterprise.id()) }}">{{ origin.ElementTemplate.Site.Enterprise.Name }}</a></li>
+        <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Site",
+            selectedId = origin.ElementTemplate.Site.id()) }}">{{ origin.ElementTemplate.Site.Name }}</a></li>
+        <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "ElementTemplate",
+            selectedId = origin.ElementTemplate.id()) }}">{{ origin.ElementTemplate.Name }}</a></li>
+        {% for ancestor in parent.ancestors([]) %}
+            <li><a href = "{{ url_for("eventFrameTemplates.selectEventFrameTemplate", eventFrameTemplateId = ancestor.id()) }}">{{ ancestor.Name }}</a></li>
+        {% endfor %}
+        <li class = "active">{{ parent.Name }}</li>
     </ol>
 </div>
 <div class = "page-header">
-    <h1>Event Frame Templates <small>{{ pageHeaderSubText }}</small></h1>
+    <h1>Event Frame Templates <small></small></h1>
 </div>
 <div>
-    {% if childrenClass == "EventFrameTemplate" %}
-        <a class = "btn btn-default" title = "Add" href = "{{ url_for("eventFrameTemplates.addEventFrameTemplate",
-            elementTemplateId = parent.id()) }}" role = "button"><span class = "glyphicon glyphicon-plus"></span></a>
-    {% elif childrenClass == "DescendantEventFrameTemplate" %}
-        <a class = "btn btn-default" title = "Add" href = "{{ url_for("eventFrameTemplates.addEventFrameTemplate",
-            parentEventFrameTemplateId = parent.id()) }}" role = "button"><span class = "glyphicon glyphicon-plus"></span></a>
-    {% endif %}
+    <a class = "btn btn-default" title = "Add" href = "{{ url_for("eventFrameTemplates.addEventFrameTemplate",
+        parentEventFrameTemplateId = parent.id()) }}" role = "button"><span class = "glyphicon glyphicon-plus"></span></a>
     <br><br>
     <table id = "eventFrameTemplatesTable" class = "table">
         <thead>
             <tr>
                 <th></th>
-                <th>{{ tableHeader }}</th>
+                <th>Event Frame Template</th>
                 <th>Description</th>
                 <th>Order</th>
                 <th></th>
@@ -83,63 +46,52 @@ Event Frame Templates
                 {% for child in children %}
                     <tr>
                         <td><a class = "btn btn-default" title = "Children" href = "{{ url_for("eventFrameTemplates.selectEventFrameTemplate",
-                            selectedClass = child.__class__.__name__, selectedId = child.id()) }}"><span class = "glyphicon glyphicon-list"></span></a></td>
+                            eventFrameTemplateId = child.id()) }}"><span class = "glyphicon glyphicon-list"></span></a></td>
                         <td>{{ child.Name }}</td>
                         <td>{{ child.Description }}</td>
-                        {% if childrenClass == "DescendantEventFrameTemplate" %}
-                            <td>{{ child.Order }}</td>
-                        {% else %}
-                            <td></td>
-                        {% endif %}
-                        {% if childrenClass == "EventFrameTemplate" or childrenClass == "DescendantEventFrameTemplate" %}
-                            <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("eventFrameTemplates.editEventFrameTemplate",
-                                eventFrameTemplateId = child.id()) }}"><span class = "glyphicon glyphicon-edit"></a></td>
-                            <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("eventFrameTemplates.deleteEventFrameTemplate",
-                                eventFrameTemplateId = child.id()) }}"><span class = "glyphicon glyphicon-trash"></a></td>
-                        {% else %}
-                            <td></td>
-                            <td></td>
-                        {% endif %}
+                        <td>{{ child.Order }}</td>
+                        <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("eventFrameTemplates.editEventFrameTemplate",
+                            eventFrameTemplateId = child.id()) }}"><span class = "glyphicon glyphicon-edit"></a></td>
+                        <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("eventFrameTemplates.deleteEventFrameTemplate",
+                            eventFrameTemplateId = child.id()) }}"><span class = "glyphicon glyphicon-trash"></a></td>
                     </tr>
                 {% endfor %}
             {% endif %}
         </tbody>
     </table>
 </div>
-{% if childrenClass == "DescendantEventFrameTemplate" %}
-    <div>
-        <h1>Event Frame Attribute Templates <small></small></h1>
-    </div>
-    <div>
-        <a class = "btn btn-default" title = "Add" href = "{{ url_for("eventFrameAttributeTemplates.addEventFrameAttributeTemplate", 
-            eventFrameTemplateId = parent.EventFrameTemplateId) }}" role = "button"><span class = "glyphicon glyphicon-plus"></span></a>
-        <br><br>
-        <table id = "eventFrameAttributeTemplatesTable" class = "table">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Description</th>
-                    <th></th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for eventFrameAttributeTemplate in eventFrameAttributeTemplates %}
-                <tr>
-                    <td>{{ eventFrameAttributeTemplate.Name }}</td>
-                    <td>{{ eventFrameAttributeTemplate.Description }}</td>
-                    <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("eventFrameAttributeTemplates.editEventFrameAttributeTemplate",
-                        eventFrameAttributeTemplateId = eventFrameAttributeTemplate.EventFrameAttributeTemplateId) }}">
-                        <span class = "glyphicon glyphicon-edit"></span></a></td>
-                    <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("eventFrameAttributeTemplates.deleteEventFrameAttributeTemplate",
-                        eventFrameAttributeTemplateId = eventFrameAttributeTemplate.EventFrameAttributeTemplateId) }}">
-                        <span class = "glyphicon glyphicon-trash"></span></a></td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
-{% endif %}
+<div class = "page-header">
+    <h1>Event Frame Attribute Templates <small></small></h1>
+</div>
+<div>
+    <a class = "btn btn-default" title = "Add" href = "{{ url_for("eventFrameAttributeTemplates.addEventFrameAttributeTemplate", 
+        eventFrameTemplateId = parent.EventFrameTemplateId) }}" role = "button"><span class = "glyphicon glyphicon-plus"></span></a>
+    <br><br>
+    <table id = "eventFrameAttributeTemplatesTable" class = "table">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Description</th>
+                <th></th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for eventFrameAttributeTemplate in eventFrameAttributeTemplates %}
+            <tr>
+                <td>{{ eventFrameAttributeTemplate.Name }}</td>
+                <td>{{ eventFrameAttributeTemplate.Description }}</td>
+                <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("eventFrameAttributeTemplates.editEventFrameAttributeTemplate",
+                    eventFrameAttributeTemplateId = eventFrameAttributeTemplate.EventFrameAttributeTemplateId) }}">
+                    <span class = "glyphicon glyphicon-edit"></span></a></td>
+                <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("eventFrameAttributeTemplates.deleteEventFrameAttributeTemplate",
+                    eventFrameAttributeTemplateId = eventFrameAttributeTemplate.EventFrameAttributeTemplateId) }}">
+                    <span class = "glyphicon glyphicon-trash"></span></a></td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 {% endblock %}
 
 {% block scripts %}
