--- a/app/templates/eventFrames/select.html
+++ b/app/templates/eventFrames/select.html
@@ -47,40 +47,6 @@ Event Frames
             {% set tableHeader = "Event Frame" %}
             {% set pageHeaderSubText = "" %}
         {% endif %}
-        <!-- {#% elif childrenClass == "Element" %}
-            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Root") }}">..</a></li>
-            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Enterprise",
-                selectedId = parent.Site.Enterprise.id()) }}">{{ parent.Site.Enterprise.Name }}</a></li>
-            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Site",
-                selectedId = parent.Site.id()) }}">{{ parent.Site.Name }}</a></li>
-            <li class = "active">{{ parent.Name }}</li>
-            {% set tableHeader = "Element" %}
-            {% set pageHeaderSubText = "Elements" %}
-        {% elif childrenClass == "EventFrameTemplate" %}
-            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Root") }}">..</a></li>
-            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Enterprise",
-                selectedId = parent.ElementTemplate.Site.Enterprise.id()) }}">{{ parent.ElementTemplate.Site.Enterprise.Name }}</a></li>
-            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Site",
-                selectedId = parent.ElementTemplate.Site.id()) }}">{{ parent.ElementTemplate.Site.Name }}</a></li>
-            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "ElementTemplate",
-                selectedId = parent.ElementTemplate.id()) }}">{{ parent.ElementTemplate.Name }}</a></li>
-            <li class = "active">{{ parent.Name }}</li>
-            {% set tableHeader = "Event Frame Template" %}
-            {% set pageHeaderSubText = "Event Frame Templates" %}
-        {% elif childrenClass == "EventFrame" %}
-            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Root") }}">..</a></li>
-            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Enterprise",
-                selectedId = parent.ElementTemplate.Site.Enterprise.id()) }}">{{ parent.ElementTemplate.Site.Enterprise.Name }}</a></li>
-            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Site",
-                selectedId = parent.ElementTemplate.Site.id()) }}">{{ parent.ElementTemplate.Site.Name }}</a></li>
-            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "ElementTemplate",
-                selectedId = parent.ElementTemplate.id()) }}">{{ parent.ElementTemplate.Name }}</a></li>
-            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Element",
-                selectedId = element.ElementId) }}">{{ element.Name }}</a></li>
-            <li class = "active">{{ parent.Name }}</li>
-            {% set tableHeader = "Event Frame" %}
-            {% set pageHeaderSubText = "" %}
-        {% endif %#} -->
     </ol>
 </div>
 <div class = "page-header">
@@ -135,9 +101,9 @@ Event Frames
                         {% elif childrenClass == "EventFrameTemplate" %}
                             <td>{{ child.Name }}</td>
                             <td>{{ child.Description }}</td>
-                            <td><a class = "btn btn-default" title = "Associate Attributes and Event Frames with Event Frame"
-                                href = "{{ url_for("eventFrameTemplates.selectEventFrameTemplate", selectedClass = "EventFrameTemplate",
-                                selectedId = child.id()) }}"><span class = "glyphicon glyphicon-link"></span></a></td>
+                            <td><a class = "btn btn-default" title = "Configure Event Frame Template"
+                                href = "{{ url_for("eventFrameTemplates.selectEventFrameTemplate", eventFrameTemplateId = child.id()) }}">
+                                <span class = "glyphicon glyphicon-duplicate"></span></a></td>
                             <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("eventFrameTemplates.editEventFrameTemplate",
                                 eventFrameTemplateId = child.id()) }}"><span class = "glyphicon glyphicon-edit"></span></a></td>
                             <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("eventFrameTemplates.deleteEventFrameTemplate",
@@ -154,26 +120,6 @@ Event Frames
                             <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("eventFrames.deleteEventFrame", eventFrameId = child.id()) }}">
                                 <span class = "glyphicon glyphicon-trash"></span></a></td>
                         {% endif %}
-                        <!-- {#% if childrenClass == "EventFrame" %}
-                            <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("eventFrames.dashboard", eventFrameId = child.id(),
-                                selectedEventFrameTemplateId = child.EventFrameTemplateId) }}"><span class = "glyphicon glyphicon-list"></span></a></td>
-                        {% else %}
-                            <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("eventFrames.selectEventFrame",
-                                selectedClass = child.__class__.__name__, selectedId = child.id()) }}"><span class = "glyphicon glyphicon-list"></span></a></td>
-                        {% endif %}
-                        {% if childrenClass == "EventFrame" %}
-                            {% set name = child.friendlyName() %}
-                        {% else %}
-                            {% set name = child.Name %}
-                        {% endif %}
-                        <td>{{ name }}</td>
-                        {% if childrenClass == "EventFrame" %}
-                            <td>{{ child.Element.Name }}</td>
-                            <td>{{ child.StartTimestamp }}</td>
-                            <td>{{ child.EndTimestamp }}</td>
-                        {% else %}
-                            <td>{{ child.Description }}</td>
-                        {% endif %#} -->
                     </tr>
                 {% endfor %}
             {% endif %}
