Moved event frame template navigation into event frame select.

--- a/app/templates/elements/dashboard.html
+++ b/app/templates/elements/dashboard.html
@@ -85,7 +85,7 @@
     </table>
 </div>
 <div>
-    <h1>{{ element.Name }} <small>Attributes <a class = "btn btn-default" title = "Link Attributes to Tags"
+    <h1>{{ element.Name }} <small>Attributes <a class = "btn btn-default" title = "Associate Attributes with Tags"
         href = "{{ url_for("elementAttributes.listElementAttributes", elementId = element.ElementId) }}">
         <span class = "glyphicon glyphicon-link"></span></a></small></h1>
 </div>
