--- a/app/templates/elements/dashboard.html
+++ b/app/templates/elements/dashboard.html
@@ -84,7 +84,7 @@
         </tbody>
     </table>
 </div>
-<div>
+<div class = "page-header">
     <h1>{{ element.Name }} <small>Attributes <a class = "btn btn-default" title = "Associate Attributes with Tags"
         href = "{{ url_for("elementAttributes.listElementAttributes", elementId = element.ElementId) }}">
         <span class = "glyphicon glyphicon-link"></span></a></small></h1>
