--- a/app/templates/elementAttributes/elementAttributes.html
+++ b/app/templates/elementAttributes/elementAttributes.html
@@ -29,21 +29,38 @@ Element Attributes
             <tr>
                 <th>Element Attribute Template</th>
                 <th>Tag</th>
-                <th></th>
-                <th></th>
-                <th></th>
+                <th><button class = "btn btn-default" id = "buttonAttributesSaveAll" title = "Save All"><span class="glyphicon glyphicon-floppy-disk"></span>
+                    </button></th>
             </tr>
         </thead>
         <tbody>
-            {% for elementAttribute in element.ElementAttributes %}
-            <tr>
-                <td>{{ elementAttribute.ElementAttributeTemplate.Name }}</td>
-                <td>{{ elementAttribute.Tag.Area.Site.Enterprise.Abbreviation + "_" + elementAttribute.Tag.Area.Site.Abbreviation + "_" +
-                    elementAttribute.Tag.Area.Abbreviation + "_" + elementAttribute.Tag.Name }}</td>
-                <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("elementAttributes.editElementAttribute",
-                    elementAttributeId = elementAttribute.ElementAttributeId) }}"><span class = "glyphicon glyphicon-edit"></span></a></td>
-                <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("elementAttributes.deleteElementAttribute",
-                    elementAttributeId = elementAttribute.ElementAttributeId) }}"><span class = "glyphicon glyphicon-trash"></span></a></td>
+            {#% for elementAttribute in element.ElementAttributes %#}
+            {% for elementAttributeTemplate in elementAttributeTemplates %}
+                {% set elementAttributes = elementAttributeTemplate.ElementAttributes.
+                    filter_by(ElementAttributeTemplateId = elementAttributeTemplate.ElementAttributeTemplateId, ElementId = element.ElementId) %}
+                {% if elementAttributes.count() > 0 %}
+                    {% set elementAttribute = elementAttributes | first %}
+                {% else %}
+                    {% set elementAttribute = None %}
+                {% endif %}
+                <tr>
+                <td>{{ elementAttributeTemplate.Name }}</td>
+                <td>
+                    <div class = "form-group" id = "divUpdatedValue{{ elementAttributeTemplate.ElementAttributeTemplateId }}">
+                        <select class = "form-control" id = "selectUpdatedValue{{ elementAttributeTemplate.ElementAttributeTemplateId }}">
+                            <option value = "-1"></option>
+                            {% for tag in tags %}
+                                {% if elementAttribute.TagId == tag.TagId %}
+                                    {% set selected = "selected" %}
+                                {% else %}
+                                    {% set selected = "" %}
+                                {% endif %}
+                                <option value = "{{ tag.TagId }}" {{ selected }}>{{ tag.fullAbbreviatedPathName() }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                </td>
+                <td></td>
             </tr>
             {% endfor %}
         </tbody>
@@ -58,22 +75,57 @@ Element Attributes
     <script>
         $(document).ready(function()
         {
-            $("#elementAttributesTable").DataTable
+            var elementAttributesTable = $("#elementAttributesTable").DataTable
             ({
                 "order":
                 [
-                    [0, "asc"]              // Element Attribute Template.
+                    [0, "asc"]                                      // Element Attribute Template.
                 ],
                 "columns":
                 [
                     null,
-                    null,
-                    { "orderable": false }, // Edit element attribute button.
-                    { "orderable": false }  // Delete element attribute button.
+                    { "orderable": false, "searchable": false },    // Tag select list.
+                    { "orderable": false }                          // Save all button.
                 ],
                 "stateSave": true,
                 "stateDuration": 0,
                 "pageLength": 25
+            })
+            // Enter key call save all.
+            $(document).keypress(function(event)
+            {
+                if (event.which == 13)
+                {
+                    $("#buttonAttributesSaveAll").focus()
+                    $("#buttonAttributesSaveAll").click()
+                }
+            })
+            $("#buttonAttributesSaveAll").click(function()
+            {
+                var rows = []
+                // Loop through the select values.
+                elementAttributesTable.$("[id^=selectUpdatedValue]").each(function()
+                {
+                    var id = $(this).attr("id").split("selectUpdatedValue")[1]
+                    var value = $.trim($(this).val())
+                    var row = {}
+                    row["ElementAttributeTemplateId"] = id
+                    row["TagId"] = value
+                    rows.push(row)
+                })
+                $.ajax(
+                {
+                    type : "POST",
+                    url : "/elementAttributes/updateMultiple/{{ element.ElementId }}",
+                    data : JSON.stringify(rows)
+                }).done(function(response)
+                {
+                    location.reload(true)
+                }).fail(function()
+                {
+                    $("#divFlashedMessages").append("<div class = \"alert alert-danger\"><button type = \"button\" class = \"close\" " +
+                        "data-dismiss = \"alert\">&times;</button>The attempt to update one or more element attributes failed.</div>")                        
+                })
             })
         })
     </script>
