Changed header for child event frame templates for clarity.

--- a/app/templates/eventFrames/select.html
+++ b/app/templates/eventFrames/select.html
@@ -60,8 +60,8 @@ Event Frames
                     selectedOperation = "configure") }}">{{ ancestor.Name }}</a></li>
             {% endfor %}
             <li class = "active">{{ parent.Name }}</li>
-                {% set tableHeader = "Event Frame Template" %}
-                {% set pageHeaderSubText = "Event Frame Templates" %}
+                {% set tableHeader = "ChildEvent Frame Template" %}
+                {% set pageHeaderSubText = "Child Event Frame Templates" %}
         {% endif %}
     </ol>
 </div>
